# repository.bossanova808

./: .coderabbit.yaml  .gitattributes  .gitignore  README.md  ReadMe.txt  addons.xml  addons.xml.md5  build.py  pyproject.toml
.github/: FUNDING.yml
Docs/PyDev Completions/: xbmc.pypredef
Docs/XBMC Pydocs/: XBMC Media Center  Index of Modules.htm  xbmcgui.html  xbmcplugin.html
Sample Code/: Plugin.pm
Sample Code/FilesViewer/: Plugin.pm  Settings.pm  install.xml  strings.txt
Sample Code/HelloWorld/: Plugin.pm  Settings.pm  install.xml  strings.txt
XBMC Pydocs/: xbmc.html  xbmcvfs.html
config/: advancedsettings.xml
downloads/weather.OzWeather/: changelog.txt
downloads/weather.ozweather/: addon.xml
latest-common/: common.py
repository/: addon.xml
repository-downloads/: addon.xml  addons.xml  addons.xml.md5
repository-downloads/XSqueezeDisplay/: Plugin.pm  install.xml
repository-downloads/plugin.program.xsqueezechooser/: changelog.txt
repository-downloads/repository.bossanova808/: addon.xml  changelog.txt  dirhash
repository-downloads/script.kodi.yoctodisplay/: dirhash
repository-downloads/script.module.xsqueezecommon/: addon.xml  changelog.txt
repository-downloads/script.xsqueeze/: addon.xml  changelog.txt
repository.bossanova808/: addon.xml  changelog.txt
script.xsqueeze/: FIRSTRUN.txt  addon.xml  changelog.txt  constants.py  default.py  icon.psd
skin.confluence.bossanova808/: addon.xml  changelog.txt
staging/: addons.xml  addons.xml.md5  addons_xml_generator.py  build.py
weather.OzWeather/: addon.xml  changelog.txt
(+636 files in other folders)
